[workspace]
resolver = "2"
members = [
  "leptonic",
  "leptonic-theme",
]
exclude = ["examples"]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
leptonic = { path = "./leptonic", default-features = false }
leptonic_theme = { path = "./leptonic-theme", default-features = false, version = "0.0.1" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
