[workspace]
resolver = "2"
members = ["leptonic", "leptonic-theme"]
exclude = ["examples"]

[workspace.package]
version = "0.3.0-beta"

[workspace.dependencies]
leptonic = { path = "./leptonic", default-features = false }
leptonic_theme = { path = "./leptonic-theme", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
