[package]
name = "leptonic-theme"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptonic-theme"
description = """
Theme builder for the Leptonic component library.
"""
categories = ["gui"]
keywords = ["leptos", "components", "component-library", "theming", "css"]

[dependencies]
include_dir = "0.7"
