[package]
name = "leptonic"
version = { workspace = true }
edition = "2021"
rust-version = "1.70"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptonic"
description = """
The Leptos component library.
"""
categories = ["gui"]
keywords = ["leptos", "components", "component-library"]
build = "build.rs"

[build-dependencies]
leptonic-theme = { version = "0.3", path = "../leptonic-theme" }
leptos-tiptap-build = { version = "0.2.4", optional = true }

[dependencies]
indexmap = "2.1.0"
indoc = "2.0.4"
itertools = "0.12.0"
js-sys = "0.3.66"
leptos = "0.5.4"
leptos-tiptap = { git = "https://github.com/lpotthast/leptos-tiptap", branch = "main", optional = true } # "0.4.0"
leptos-use = { version = "0.9.0", features = [
    "math",
] }
leptos_icons = { version = "0.1.0", features = [
    "BsSun",
    "BsMoon",
    "BsCheckCircleFill",
    "BsInfoCircleFill",
    "BsExclamationCircleFill",
    "BsExclamationTriangleFill",
    "BsCaretUp",
    "BsCaretUpFill",
    "BsCaretDown",
    "BsCaretDownFill",
    "BsParagraph",
    "BsTypeBold",
    "BsTypeItalic",
    "BsTypeStrikethrough",
    "BsBlockquoteLeft",
    "BsBrightnessAltHigh",
    "BsTextLeft",
    "BsTextCenter",
    "BsTextRight",
    "BsJustify",
    "BsXCircleFill",
    "VsCopy",
] }
leptos_router = "0.5.4"
leptos_meta = { version = "0.5", features = [] }
serde = "1.0.193"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
time = { version = "0.3.31", features = [
    "wasm-bindgen",
    "macros",
    "serde",
    "serde-well-known",
] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
# TODO: What of all below is really required?
web-sys = { version = "0.3.66", features = [
    "Clipboard",
    "DomRect",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "HtmlInputElement",
    "Storage",
] }

[dev-dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3.39"
web-sys = "0.3.66"

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos-use/ssr"]
hydrate = ["leptos/hydrate"]

# Enables clipboard support. Requires `[build] rustflags = ["--cfg=web_sys_unstable_apis"]` in your cargo.toml.
clipboard = []

# Enables tiptap editor support. Tiptap related JS files will be copied to your proect directory when running a build.
tiptap = ["dep:leptos-tiptap", "dep:leptos-tiptap-build"]

full = ["clipboard", "tiptap"]

[lints]
workspace = true
