[package]
name = "leptonic"
version = { workspace = true }
edition = "2021"
rust-version = "1.70"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptonic"
description = """
The Leptos component library.
"""
categories = ["gui"]
keywords = ["leptos", "components", "component-library"]
build = "build.rs"

[build-dependencies]
anyhow = "1.0.79"
cargo_toml = "0.19.1"
lazy_static = "1.4.0"
leptonic-theme = { version = "0.5", path = "../leptonic-theme" }
leptos-tiptap-build = { version = "0.2.6", optional = true }

[dependencies]
cfg-if = "1.0.0"
indexmap = "2.2.2"
indoc = "2.0.4"
itertools = "0.12.1"
js-sys = "0.3.68"
leptos = "0.6.9"
leptos_reactive = "0.6.9"
leptos-tiptap = { version = "0.7.0", optional = true }
leptos-use = { version = "0.13.4", features = ["math"] }
icondata = { version = "0.3.0" }
leptos_meta = { version = "0.6.9", features = [] }
leptos_router = "0.6.9"
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
time = { version = "0.3.34", features = [
    "wasm-bindgen",
    "macros",
    "serde",
    "serde-well-known",
] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "v7", "js", "serde"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
# TODO: What of all below is really required?
web-sys = { version = "0.3.68", features = [
    "DomRect",
    "Event",
    "EventTarget",
    "ScrollIntoViewOptions",
    "HtmlFormElement",
    "HtmlInputElement",
    "Storage",
] }
educe = "0.5.11"
typed-builder = "0.18.1"

[dev-dependencies]
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.41"
web-sys = "0.3.68"

#[patch.crates-io]
#leptos = { git = 'https://github.com/leptos-rs/leptos', branch = "main" }
#leptos_reactive = { git = 'https://github.com/leptos-rs/leptos', branch = "main" }
#leptos_dom = { git = 'https://github.com/leptos-rs/leptos', branch = "main" }
#leptos_meta = { git = 'https://github.com/leptos-rs/leptos', branch = "main" }
#leptos_router = { git = 'https://github.com/leptos-rs/leptos', branch = "main" }

[features]
default = ["hooks"]

csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos-use/ssr", "leptos-tiptap?/ssr"]
hydrate = ["leptos/hydrate"]

# Core functionality. Hooks provide low level functions like `usePress` which hande interactions, aria attributes and more.
# Use hooks to build your own set of components.
hooks = []

# Atoms are headless / unstyled Leptos components. All atoms render a single html element and are therefore easy to style.
# Atoms use hooks and allow you to build more complex component without requring too much knowledge about hooks.
atoms = ["hooks"]

# Components provide headless, pre-build, complex functionality, building on atoms.
components = ["atoms"]

# Themes for atoms and components. Copied on build to your applicaiton root directory.
themes = []

# Enables clipboard support. Requires `[build] rustflags = ["--cfg=web_sys_unstable_apis"]` in your cargo.toml.
clipboard = ["components", "web-sys/Clipboard"]

# Enables tiptap editor support. Tiptap related JS files will be copied to your proect directory when running a build.
tiptap = ["components", "dep:leptos-tiptap", "dep:leptos-tiptap-build"]

full = ["hooks", "atoms", "components", "clipboard", "tiptap"]

nightly = ["leptos/nightly"]

# Disable the build script when running on docs.rs
docsrs = []

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["docsrs"]
