[package]
name = "book-ssr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7.4", optional = true }
axum-server = { version = "0.6.0", features = ["tls-rustls"], optional = true }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
http = "1.0.0"
indoc = "2.0.4"
#leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "main", features = ["clipboard", "tiptap"] }
leptonic = { path = "../../leptonic", features = ["full"] }
leptos = { version = "0.6.9", features = [] }
leptos-use = "0.10.5"
leptos_axum = { version = "0.6.9", optional = true }
leptos_meta = { version = "0.6.9", features = [] }
leptos_router = { version = "0.6.9", features = [] }
ordered-float = "4.2.0"
ringbuf = "0.3.3"
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.56"
time = { version = "0.3.34", features = ["wasm-bindgen"] }
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "signal",
], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.1", features = ["full"], optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
uuid = { version = "1.7.0", features = ["js", "v4", "serde"] }
wasm-bindgen = "0.2.91"

[patch.crates-io]
leptos = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }
leptos_reactive = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }
leptos_dom = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }
leptos_axum = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }
leptos_meta = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }
leptos_router = { git = 'https://github.com/lpotthast/leptos', branch = "spread-event-handlers" }

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "leptonic/hydrate",
]
ssr = [
    "dep:axum",
    "dep:axum-server",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptonic/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory. Relative to your project root.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory. Relative to your project root.
# Leptonic's `<Root>` component expects JS files to be available at a "js" directory at runtime (for dynamic script includes). Specify a different prop value if you choose a non-standard location here. 
js-dir = "public/js"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "book-ssr"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
