[package]
name = "book"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
# Slightly higher optimization for our code. This should increase incremental compilation times.
opt-level = 1
#debug = false
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
indoc = "2.0.4"
leptonic = { path = "../../leptonic", features = ["csr"] }
leptos = { version = "0.5.2", features = ["csr"] }
leptos-use = "0.8.2"
leptos_icons = { version = "0.1.0", features = [
    "BsGithub",
    "BsSearch",
    "BsList",
    "BsThreeDots",
    "BsFolder",
    "BsFolderFill",
    "BsBook",
    "BsColumnsGap",
    "BsToggles",
    "BsChatSquare",
    "BsCircleSquare",
    "BsArrowsMove",
    "BsVolumeDownFill",
    "BsVolumeUpFill",
    "BsBell",
    "BsPower",
] }
leptos_meta = { version = "0.5.2", features = ["csr"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
ordered-float = "4.1.1"
serde = "1.0.192"
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
time = { version = "0.3.30", features = ["wasm-bindgen"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tracing-wasm = "0.2.1"
uuid = { version = "1.6.1", features = ["js", "v4", "serde"] }
wasm-bindgen = "0.2.88"

[build-dependencies]
leptonic-theme = { path = "../../leptonic-theme" }
leptos-tiptap-build = "0.2.4"
