[package]
name = "leptonic-template-csr"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
indoc = "2.0.4"
thiserror = "1"
leptonic = { path = "../../leptonic", features = ["csr", "clipboard"] }
leptos = { version = "0.5.4", features = ["csr"] }
leptos-use = "0.9.0"
leptos_icons = { version = "0.1.0", features = [
    "BsGithub",
    "BsSearch",
    "BsList",
    "BsThreeDots",
    "BsFolder",
    "BsFolderFill",
    "BsBook",
    "BsColumnsGap",
    "BsToggles",
    "BsChatSquare",
    "BsCircleSquare",
    "BsArrowsMove",
    "BsVolumeDownFill",
    "BsVolumeUpFill",
    "BsBell",
    "BsPower",
] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
leptos_router = { version = "0.5.4", features = ["csr"] }
ordered-float = "4.2.0"
serde = "1.0.193"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
time = { version = "0.3.31", features = ["wasm-bindgen"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
uuid = { version = "1.6.1", features = ["js", "v4", "serde"] }
wasm-bindgen = "0.2.89"
