[package]
name = "leptonic-template-csr"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "main", features = ["csr"] }
leptos = { version = "0.5.7", features = ["csr"] }
leptos_meta = { version = "0.5.7", features = ["csr"] }
leptos_router = { version = "0.5.7", features = ["csr"] }
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"
